cabal-version:      3.0
name:               stakhanov
version:            0.1.0.0
synopsis:           A PGMQ client
description:
  A fast Haskell PostgreSQL Message Queue client for busy workers

homepage:           https://github.com/MichelBoucey/stakhanov
license:            BSD-3-Clause
license-file:       LICENSE
author:             Michel Boucey
maintainer:         michel.boucey@gmail.com
copyright:          (c) 2026 - Michel Boucey
category:           Database, PostgreSQL
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: ReadMe.md
tested-with:
  GHC ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2 || ==9.14.1

source-repository head
  type:     git
  location: https://github.com/MichelBoucey/stakhanov.git

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Database.PostgreSQL.Stakhanov
    Database.PostgreSQL.Stakhanov.Connection
    Database.PostgreSQL.Stakhanov.Metrics
    Database.PostgreSQL.Stakhanov.Types

  other-modules:
    Database.PostgreSQL.Stakhanov.Internal
    Database.PostgreSQL.Stakhanov.Statements

  default-extensions:
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    RecordWildCards

  build-depends:
    , aeson                     >=2.2.3    && <2.4
    , base                      >=4.8      && <5
    , bytestring                >=0.11.5.4 && <0.13
    , contravariant-extras      >=0.3.5    && <0.3.6
    , hasql                     >=1.9      && <1.10
    , hasql-dynamic-statements  >=0.3      && <0.4
    , hasql-th                  >=0.4      && <0.5
    , text                      >=1.2.3    && <2.2
    , time                      >=1.9.3    && <1.16
    , vector                    >=0.12.2   && <0.14

  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite hspec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          hspec.hs
  build-depends:
    , aeson      >=2.2.3  && <2.4
    , base       >=4.8    && <5
    , hspec      >=2.11   && <3
    , Stakhanov
    , vector     >=0.12.2 && <0.14

  default-language: Haskell2010
